# TPD-FL

./: .gitignore  README.md
tpd_fl/: __init__.py  pyproject.toml
tpd_fl/configs/decode/: no_tpd.yaml  tpd.yaml  tpd_full.yaml  tpd_off.yaml  tpd_projection.yaml  tpd_projection_schedule.yaml
tpd_fl/configs/eval/: cpu_small.yaml  gpu_full.yaml  main.yaml
tpd_fl/configs/fl/: fedadam.yaml  fedavg.yaml  fedavg_cpu.yaml  fedavg_gpu.yaml
tpd_fl/configs/model/: cpu_llada8b.yaml  gpu_llada2_1_mini.yaml
tpd_fl/diffusion/: __init__.py  decode_loop.py  model_adapter.py
tpd_fl/eval/: __init__.py  baselines.py  benchgen.py  empirical_eval.py  leakage.py  leakage_semantic.py  metrics_real.py  plots.py  run_eval.py  speed.py  utility.py
tpd_fl/fl/: __init__.py  client.py  datasets.py  lora.py  protocols.py  server.py  step_adapters.py
tpd_fl/model/: __init__.py  backend_base.py  backend_hf_bert.py  backend_hf_llada.py  backend_hf_llada2.py  backend_hf_mdlm.py  modeling_mdlm.py
tpd_fl/proofs/: README.md  mapping.md  tpd_semantics.tex
tpd_fl/scripts/: run_all_cpu.sh  run_cpu_eval.sh  run_cpu_sanity.sh  run_decode.sh  run_eval.sh  run_fl.sh  run_fl_cpu.sh
tpd_fl/tests/: test_edit_closure.py  test_fl_invariance.py  test_invariants_property.py  test_okpi.py  test_projection.py  test_schedule.py
tpd_fl/tpd/: __init__.py  allowed_sets.py  diagnostics.py  projection.py  repair.py  schedule.py  typing.py  verifier.py
